# Pytorch2Onnxruntime

./: .gitignore  README.md
3dssd_infer/includes/: custom_op.h
3dssd_infer/src/: test_ortops.cc
PyTorchCustomOperator/ort_custom_op/: CMakeLists.txt  custom_op.cc  custom_op.h  custom_op_test.cc
PyTorchCustomOperator/pytorch_custom_op/: custom_group_norm.cpp  export_custom_op.py  model.onnx
PyTorchCustomOperator/pytorch_custom_op/custom_group_norm.egg-info/: PKG-INFO
custom_infer_bak/: CMakeLists.txt  custom_op.cc  custom_op_infer.h  sampling.cpp  sampling_gpu.cu  sampling_gpu.h
custom_infer_test/: CMakeLists.txt  custom_op.cc  custom_op_infer.h  custom_op_test.cc  model.onnx  model_520.onnx  sampling.cpp  sampling_1.cpp  sampling_gpu.h  sampling_gpu_bak.cu
custom_infer_test_foo/: CMakeLists.txt  cuda_utils.h  custom_op_infer.h  custom_op_test.cc  model.onnx  sampling.cpp  sampling_gpu.cu  sampling_gpu.h  test_allocator.cc
custom_infer_test_restruct/: CMakeLists.txt  custom_op_infer.h  custom_op_test.cc  custom_op_test_main.cc  sampling_gpu.h  test_allocator.cc  test_ort.py
custom_test/: export_fps_op.py  model.onnx  pointnet2_api.cpp  pointnet2_utils.py  sampling.cpp  sampling_gpu.cu  sampling_gpu.h  setup.py
custom_test/custom_test.egg-info/: PKG-INFO  SOURCES.txt
custom_test/fps.egg-info/: PKG-INFO  SOURCES.txt
custom_test/include/: sampling_gpu.h
custom_test/pytorch/: CMakeLists.txt  export_fps_op.py  pointnet2_utils.py  rename.py  sampling.cpp  sampling_gpu.cu  setup.py
fps_custom_infer/: custom_op_test.cc  custom_op_utils.cc  fps_model1.onnx  fps_model1_0608.onnx  fps_model2.onnx  sampling.cpp  sampling_gpu.cu  test_ort.py
